# candle_notes

./: Cargo.toml  README.md
src/: create_tensors.rs  dnn_demo1.rs  dnn_demo2.rs  dnn_demo3.rs  linear_demo1.rs  linear_demo2.rs  mlp_mnist_csv.rs  mnist_mlp.rs  omkar_ann.rs  tensor_broadcasting.rs  tensor_matmul.rs
