[package]
name = "candle_notes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_tensors"
path = "src/create_tensors.rs"

[[bin]]
name = "tensor_matmul"
path = "src/tensor_matmul.rs"

[[bin]]
name = "tensor_broadcasting"
path = "src/tensor_broadcasting.rs"

[[bin]]
name = "linear_demo1"
path = "src/linear_demo1.rs"

[[bin]]
name = "linear_demo2"
path = "src/linear_demo2.rs"

[[bin]]
name = "dnn_demo1"
path = "src/dnn_demo1.rs"

[[bin]]
name = "dnn_demo2"
path = "src/dnn_demo2.rs"

[[bin]]
name = "dnn_demo3"
path = "src/dnn_demo3.rs"

[[bin]]
name = "dnn_demo4"
path = "src/dnn_demo4.rs"

[[bin]]
name = "mnist_mlp"
path = "src/mnist_mlp.rs"

[[bin]]
name = "mlp_mnist_csv"
path = "src/mlp_mnist_csv.rs"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-datasets = "0.8.2"
tqdm = "0.7.0"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
rand = "0.8.5"

